<resources>
    <string name="app_name">MSA manager</string>
    <string name="app_title">מנהל משאבי הארגון מ.ש אלומיניום</string>
    <string name="prompt_email">שם משתמש</string>
    <string name="prompt_password">סיסמה</string>
    <string name="action_sign_in">התחבר או הרשם</string>
    <string name="action_sign_in_short">התחבר</string>
    <string name="error_invalid_email">שם המשתמש לא חוקי</string>
    <string name="error_invalid_password">הסיסמה קצרה מדי (6 תווים לפחות)</string>
    <string name="error_incorrect_password">שם משתמש או סיסמה שגויים</string>
    <string name="error_field_required">השדה הזה הוא שדה חובה</string>
    <string name="permission_rationale">גישה לאנשי קשר נדרשת כדי לבצע השלמה אוטומטית</string>
    <string name="login">התחבר</string>
    <string name="return_to_login">חזור למסך ההתחברות</string>
    <string name="entry1">הזן ידנית</string>
    <string name="entry2">הזן אוטומטית</string>
    <string name="manage_users_db">נהל מסד נתוני משתמשים</string>
    <string name="delete_verify">סיסמה (ווידוא) </string>
    <string name="delete_title">מסך ניהול המשתמשים</string>
    <string name="login_title">מסך חיבור לאפליקציה</string>
    <string name="delete_send_changes">שלח שינוי סיסמה</string>
    <string name="delete_mismatch">הסיסמאות המוזנות לא תואמות!</string>
    <string name="delete_empty_pw">הסיסמה לא יכולה להיות ריקה!</string>
    <string name="delete_confirmed">הפעולה בוצעה בהצלחה</string>
    <string name="key_sync_offline">offline_sync_key</string>
    <string name="main_progress_bar_max">100</string>
    <string name="main_progressbar_start">50</string>
    <string name="main_progressbar_inc_rate">5</string>
    <string name="testing_uid">109876543210</string>
    <string name="testing_email">dummy@test.com</string>
    <string name="testing_username">dummy</string>
    <string name="testing_password">1234</string>
    <string name="gmail_suffix">\@gmail.com</string>
    <string name="hello_string">שלום באיזה פרויקט תרצה לעבוד?</string>
    <string name="shalom">שלום</string>
    <string name="project_options_title">בורר הפרויקטים</string>
    <string name="main_btn_choose">בחר בפרויקט</string>
    <string name="project_options_1">קבלני משנה</string>
    <string name="project_options_2">דיווחי תקלות</string>
    <string name="project_options_3">לו\"ז</string>
    <string name="project_options_decide">בחירת הפעולה</string>
    <string name="divohi_takalot_form">טופס</string>
    <string name="divohi_takalot_edit">עריכה</string>
    <string name="kablni_mishne_tavla_pshota">טבלה פשוטה</string>
    <string name="kablni_mishne_hodshiim">נתונים של החודשיים האחרונים</string>
    <string name="kablni_mishne_pirot">פירוט</string>
    <string name="USER_database_filename">Users.db</string>
    <string name="USER_TABLE_NAME">Users</string>
    <string name="USER_COL_ID">id</string>
    <string name="USER_COL_PASSWORD">password</string>
    <string name="USER_DB_VERSION">3</string>
    <string name="title_activity_login">Sign in</string>
    <string name="REMOTE_IP_ADDR">10.0.0.7</string>
    <string name="class_jtds_jdbc">net.sourceforge.jtds.jdbc.Driver</string>
    <string name="REMOTE_CONNECT_STRING">jdbc:jtds:sqlserver://</string>
    <string name="REMOTE_CONNECT_OPTIONS">;progname=Android_MSA;socketKeepAlive=true;socketTimeout=5;loginTimeout=5;useNTLMv2=true;domain=DOMAIN</string>
    <string name="get_date_from_server">select getdate()</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="network">network</string>
    <string name="network_error">There&quot;s and error connecting to server, please try again</string>
    <string name="cache_DB_NAME">cache.db</string>
    <string name="cache_table_name">cache</string>
    <string name="cache_col_1">id</string>
    <string name="cache_col_2">command</string>
    <string name="cache_col_3">USER</string>
    <string name="cache_db_ver">1</string>
    <string name="time_to_sync_in_sec">5</string>
    <string name="millis_in_sec">1000</string>
    <string name="successfull_operation">הפעולה בוצעה בהצלחה</string>
    <string name="notificatoin_op_id">קוד הפעולה :</string>
    <string name="service_name">offline_mode_service</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_str">הגדרות</string>
    <string name="restart_activity">הגדרות אלו ייחלו רק מיד לאחר מעבר למסך אחר</string>
    <string name="pref_header_general">כללי</string>
    <string name="pref_style_txt">סטייל האפליקציה</string>
    <string name="pref_style_summary">שינוי כאן יגרור הפעלה מחדש של האפליקציה</string>
    <string name="warning_need_restart">ההגדרות יוטמעו לחלוטין לאחר פתיחה מחדש של האפליקציה</string>
    <string-array name="style_entries">
        <item>חשוך</item>
        <item>מואר</item>
        <item>CodeFreak</item>
    </string-array>
    <string-array name="style_values">
        <item>Dark</item>
        <item>Light</item>
        <item>CodeFreak</item>
    </string-array>
    <string name="pref_title_display_name">שם המשתמש</string>
    <string name="pref_display_name_summary">יוצג כאשר אין שם משתמש מוגדר למשתמש מצד השרת</string>
    <string name="pref_default_display_name">אבי כהן</string>
    <string name="pref_header_data_sync">נתונים</string>
    <string name="pref_title_sync_frequency">קצב הרענון</string>
    <string name="pref_freq_summary">קצב הסנכרון לשרת</string>
    <string-array name="pref_sync_frequency_titles">
        <item>ללא</item>
        <item>15 שניות</item>
        <item>5 דקות</item>
        <item>15 דקות</item>
        <item>30 דקות</item>
        <item>שעה</item>
        <item>שעתיים</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>0</item>
        <item>15</item>
        <item>300</item>
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
        <item>7200</item>
    </string-array>
    <string name="development_title">הגדרות פיתוח</string>
    <string name="pref_IP_address">כתובת הIP</string>
    <string name="pref_ip_summary">כתובת הIP לתקשורת בין השרת ללקוח.</string>
    <string name="pref_header_notifications">התראות</string>
    <string name="pref_txt_notification">התראות דלוקות</string>
    <string name="pref_txt_notification_summary">התראות ישלחו בכל פעם שיהיה סנכרון מוצלח של מסד הנתונים</string>
    <string name="delete_users">מחק את טבלת המשתמשים</string>
    <string name="delete_users_warning">דורש הפעלה מחדש של האפליקציה</string>
    <string name="delete_offline">מחק את טבלת הoffline mode</string>
    <string name="GUI_only_title">קריאות האפליקציה יהיו ללא צד שרת</string>
    <string name="GUI_only_summary">במצב הזה נוכל לזרום בממשק משתמש ללא שימוש בתקשורת האינטרנט</string>
    <string name="notification_sync_successfuk">סנכרון בוצע בהצלחה! </string>
    <string name="notification_title">מ.ש אלומיניום</string>
    <string name="save_data_local">לשמור העתק של הנתונים על המכשיר?</string>
    <string name="local_or_not">local_or_not</string>
    <string name="sync_frequency">sync_frequency</string>
    <string name="IP">IP</string>
    <string name="delete_users_key">delete_users</string>
    <string name="delete_offline_key">delete_offline</string>
    <string name="notification">notification</string>
    <string name="style">style</string>
    <string name="username_key">username</string>
    <string name="gui_mode_key">gui_mode_key</string>
    <string name="DATAAREAID_DEVELOP">mz11</string>
    <string name="DATABASE_NAME">Aluminum</string>
    <string name="TABLE_INVENTORY">inventtable</string>
    <string name="TABLE_PROJECTS">projtable</string>
    <string name="TABLE_VENDORS">vendortable</string>
    <string name="TABLE_OPR">OprRouteTable</string>
    <string name="TABLE_BIG">OferKablanConstructionOnAccount</string>
    <string name="INVENTORY_ID">itemid</string>
    <string name="INVENTORY_ID_TYPE">text</string>
    <string name="INVENTORY_NAME">itamname</string>
    <string name="INVENTORY_NAME_TYPE">text</string>
    <string name="INVENTORY_DATAAREAID">dataareaid</string>
    <string name="INVENTORY_DATAAREAID_TYPE">text</string>
    <string name="PROJECTS_ID">projid</string>
    <string name="PROJECTS_ID_TYPE">text</string>
    <string name="PROJECTS_NAME">name</string>
    <string name="PROJECTS_NAME_TYPE">text</string>
    <string name="PROJECTS_DATAAREAID">dataareaid</string>
    <string name="PROJECTS_DATAAREAID_TYPE">text</string>
    <string name="OPR_ID">OPRID</string>
    <string name="OPR_ID_TYPE">text</string>
    <string name="OPR_NAME">NAME</string>
    <string name="OPR_NAME_TYPE">text</string>
    <string name="OPR_DATAAREAID">DATAAREAID</string>
    <string name="OPR_DATAAREAID_TYPE">text</string>
    <string name="VENDORS_ID">accountnum</string>
    <string name="VENDORS_ID_TYPE">DATAAREAID</string>
    <string name="VENDORS_NAME">name</string>
    <string name="VENDORS_NAME_TYPE">DATAAREAID</string>
    <string name="VENDORS_DATAAREAID">dataareaid</string>
    <string name="VENDORS_DATAAREAID_TYPE">DATAAREAID</string>
    <string name="TABLE_BIG_VENDOR_ID">ACCOUNTNUM</string>
    <string name="TABLE_BIG_VENDOR_ID_TYPE">text</string>
    <string name="TABLE_BIG_DATAAREAID">DATAAREAID</string>
    <string name="TABLE_BIG_DATAAREAID_TYPE">text</string>
    <string name="TABLE_BIG_REC_VERSION">RECVERSION</string>
    <string name="TABLE_BIG_REC_VERSION_TYPE">text</string>
    <string name="TABLE_BIG_REC_ID">RECID</string>
    <string name="TABLE_BIG_REC_ID_TYPE">text</string>
    <string name="TABLE_BIG_PROJECTS_ID">PROJID</string>
    <string name="TABLE_BIG_PROJECTS_ID_TYPE">text</string>
    <string name="TABLE_BIG_INVENTORY_ID">ITEMID</string>
    <string name="TABLE_BIG_INVENTORY_ID_TYPE">text</string>
    <string name="TABLE_BIG_FLAT">FLAT</string>
    <string name="TABLE_BIG_FLAT_TYPE">text</string>
    <string name="TABLE_BIG_FLOOR">FLOOR</string>
    <string name="TABLE_BIG_FLOOR_TYPE">text</string>
    <string name="TABLE_BIG_QTY">QTY</string>
    <string name="TABLE_BIG_QTY_TYPE">real</string>
    <string name="TABLE_BIG_SALESPRICE">SALESPRICE</string>
    <string name="TABLE_BIG_SALESPRICE_TYPE">real</string>
    <string name="TABLE_BIG_OPR_ID">OPRID</string>
    <string name="TABLE_BIG_OPR_ID_TYPE">text</string>
    <string name="TABLE_BIG_MILESTONEPERCENT">MILESTONEPERCENT</string>
    <string name="TABLE_BIG_MILESTONEPERCENT_TYPE">real</string>
    <string name="TABLE_BIG_QTYFORACCOUNT">QTYFORACCOUNT</string>
    <string name="TABLE_BIG_QTYFORACCOUNT_TYPE">real</string>
    <string name="TABLE_BIG_PERCENTFORACCOUNT">PERCENTFORACCOUNT</string>
    <string name="TABLE_BIG_PERCENTFORACCOUNT_TYPE">real</string>
    <string name="TABLE_BIG_TOTALSUM">TOTALSUM</string>
    <string name="TABLE_BIG_TOTALSUM_TYPE">real</string>
    <string name="TABLE_BIG_SALPROG">SALRPOG</string>
    <string name="TABLE_BIG_SALPROG_TYPE">tinyint</string>
    <string name="TABLE_BIG_PRINTORDER">PRINTORDER</string>
    <string name="TABLE_BIG_PRINTORDER_TYPE">int</string>
    <string name="TABLE_BIG_ITEMNUMBER">ITEMNUMBER</string>
    <string name="TABLE_BIG_ITEMNUMBER_TYPE">real</string>
    <string name="TABLE_BIG_KOMANUM">KOMANUM</string>
    <string name="TABLE_BIG_KOMANUM_TYPE">real</string>
    <string name="TABLE_BIG_DIRANUM">DIRANUM</string>
    <string name="TABLE_BIG_DIRANUM_TYPE">real</string>
    <string name="sync_btn_text">סנכרן עכשיו</string>
    <string name="LOCAL_SYNC_DATABASE_NAME">local_sync_db.db</string>
    <string name="LOCAL_PROJECTS_TABLE_NAME">projects</string>
    <string name="LOCAL_PROJECTS_TABLE_VERSION">1</string>
    <string name="LOCAL_PROJECTS_COLUMN_ID">projid</string>
    <string name="LOCAL_PROJECTS_COLUMN_NAME">name</string>
    <string name="LOCAL_PROJECTS_COLUMN_DATAARAEID">dataaraeid</string>
    <string name="LOCAL_PROJECTS_COLUMN_USERNAME">username</string>
    <string name="LOCAL_VENDORS_TABLE_NAME">vendors</string>
</resources>