<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <ListPreference
        android:defaultValue="Light"
        android:entries="@array/style_entries"
        android:entryValues="@array/style_values"
        android:key="@string/style"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_style_summary"
        android:title="@string/pref_style_txt" />


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="@string/username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_display_name_summary"
        android:title="@string/pref_title_display_name" />



</PreferenceScreen>
