<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.chaosruler.msa_manager.activies.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.chaosruler.msa_manager.activies.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.chaosruler.msa_manager.activies.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="com.example.chaosruler.msa_manager.activies.SettingsActivity$DevelopMentSettingsPrefFragment"
        android:icon="@drawable/rsz_developmentmode"
        android:title="@string/development_title"
        />
</preference-headers>
