<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chaosruler.msa_manager.activies.kablni_mishne_activity"
    android:layoutDirection="ltr"
    >

    <Button
        android:id="@+id/kablni_mishne_pshot"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_sample1"
        android:text="@string/kablni_mishne_tavla_pshota" />

    <Button
        android:id="@+id/kablni_mishne_ntonim_hodshiim"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/kablni_mishne_pirot"
        android:layout_below="@+id/kablni_mishne_pirot"
        android:layout_marginTop="66dp"
        android:background="@drawable/button_sample1"
        android:text="@string/kablni_mishne_hodshiim"
        android:visibility="gone" />

    <Button
        android:id="@+id/kablni_mishne_pirot"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/kablni_mishne_pshot"
        android:layout_below="@+id/kablni_mishne_pshot"
        android:layout_marginTop="77dp"
        android:background="@drawable/button_sample1"
        android:text="@string/kablni_mishne_pirot" />

</RelativeLayout>
