<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activies.ProjectOptions2Activity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/Light.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:visibility="gone"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/Light.PopupOverlay"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/background_dark">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="center"
            app:tabIndicatorColor="@color/colorPrimary"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextColor="@android:color/black">

            <android.support.design.widget.TabItem
                android:id="@+id/project_options2_btn_kablni_mishne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_options_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/project_options2_btn_divohi_takalot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_options_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/project_options2_btn_loz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_options_3" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>