<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context="com.example.chaosruler.msa_manager.activies.project_options">

    <Button
        android:id="@+id/project_options_btn_kablni_mishne"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/button_margin_project_options"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_sample1"
        android:text="@string/project_options_1" />

    <Button
        android:id="@+id/project_options_btn_divohi_takalot"
        android:layout_width="wrap_content"
        android:layout_height="30dp"

        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/button_margin_project_options"
        android:layout_marginTop="@dimen/button_margin_project_options"
        android:background="@drawable/button_sample1"
        android:text="@string/project_options_2" />

    <Button
        android:id="@+id/project_options_btn_loz"
        android:layout_width="wrap_content"
        android:layout_height="30dp"

        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/button_margin_project_options"
        android:layout_marginTop="@dimen/button_margin_project_options"
        android:background="@drawable/button_sample1"
        android:text="@string/project_options_3" />

    <Button
        android:id="@+id/project_options_all"
        android:layout_width="wrap_content"
        android:layout_height="30dp"

        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/button_margin_project_options"
        android:layout_marginTop="@dimen/button_margin_project_options"
        android:background="@drawable/button_sample1"
        android:text="@string/project_options_view_all"
        android:visibility="gone" />

</LinearLayout>
