<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context="com.example.chaosruler.msa_manager.user_delete_activity">

    <Spinner
        android:id="@+id/delete_spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/delete_username_textview"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/prompt_email"
        app:layout_constraintBottom_toBottomOf="@+id/delete_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toEndOf="@+id/delete_spinner"
        app:layout_constraintTop_toTopOf="@+id/delete_spinner"
        app:layout_constraintVertical_bias="0.388" />

    <EditText
        android:id="@+id/delete_password1_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/delete_username_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_spinner" />

    <TextView
        android:id="@+id/delete_password1_textview"
        android:layout_width="47dp"
        android:layout_height="27dp"
        android:text="@string/prompt_password"
        app:layout_constraintBottom_toBottomOf="@+id/delete_password1_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toEndOf="@+id/delete_password1_edittext"
        app:layout_constraintTop_toTopOf="@+id/delete_password1_edittext"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/delete_password2_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/delete_password1_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_password1_edittext" />

    <TextView
        android:id="@+id/delete_password2_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_verify"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/delete_password2_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/delete_password2_edittext"
        app:layout_constraintTop_toTopOf="@+id/delete_password2_edittext"
        app:layout_constraintVertical_bias="0.619" />

    <Button
        android:id="@+id/delete_delete"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:background="@drawable/button_sample1"

        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="מחק"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_change_password"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/button_sample1"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="שנה סיסמה"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/delete_send_changes_btn"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/button_sample1"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/delete_send_changes"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_password2_edittext" />
</android.support.constraint.ConstraintLayout>
